--- a/src/main/resources/templates/profile/profile-index.html
+++ b/src/main/resources/templates/profile/profile-index.html
@@ -80,15 +80,17 @@
                 <h2>Target date tasks</h2>
                 <div th:each="task : ${scheduledTasks}">
                     <div th:if="${!task.complete}">
-                        <div>
+                        <div class="d-flex justify-content-between">
                             <a th:href="'#task-' + ${task.id}" class="anchorMagic">
                                 <span th:text="${task.title}"></span>
                             </a>
-                            <span th:if="${!#strings.contains(task.dateScheduled, '1969') && !#strings.contains(task.dateScheduled, '1970')}" class="badge bg-info rounded pill">Target Date:
-                        <span th:text="${#strings.substring(task.dateScheduled, 5,7)}"></span>/
-                        <span th:text="${#strings.substring(task.dateScheduled, 8)}"></span>/
-                        <span th:text="${#strings.substring(task.dateScheduled, 0,4)}"></span>
-                    </span>
+                            <div>
+                                <span th:if="${!#strings.contains(task.dateScheduled, '1969') && !#strings.contains(task.dateScheduled, '1970')}" class="badge bg-info rounded pill">Target Date:
+                                    <span th:text="${#strings.substring(task.dateScheduled, 5,7)}"></span>/
+                                    <span th:text="${#strings.substring(task.dateScheduled, 8)}"></span>/
+                                    <span th:text="${#strings.substring(task.dateScheduled, 0,4)}"></span>
+                                </span>
+                            </div>
                         </div>
                     </div>
                 </div>
